{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 21,
  "lineage": "69ab268f-6004-a530-2019-5678f7a2c99b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051886849421:internet-gateway/igw-03f833e36a3488b8f",
            "id": "igw-03f833e36a3488b8f",
            "owner_id": "051886849421",
            "tags": {
              "Name": "techchallenge-igw"
            },
            "tags_all": {
              "Name": "techchallenge-igw"
            },
            "vpc_id": "vpc-059e11e8a8a90a79f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051886849421:route-table/rtb-0135cc13ce66f758a",
            "id": "rtb-0135cc13ce66f758a",
            "owner_id": "051886849421",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03f833e36a3488b8f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techchallenge-public-rt"
            },
            "tags_all": {
              "Name": "techchallenge-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-059e11e8a8a90a79f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0550a79746cb1097f",
            "route_table_id": "rtb-0135cc13ce66f758a",
            "subnet_id": "subnet-09aecc332c59131e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e01c4499562c9895",
            "route_table_id": "rtb-0135cc13ce66f758a",
            "subnet_id": "subnet-0c615a7c4a48c0cce"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051886849421:security-group/sg-01a375a5833478f4b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a375a5833478f4b",
            "ingress": [],
            "name": "techchallenge-eks-nodes-20260712230429985800000001",
            "name_prefix": "techchallenge-eks-nodes-",
            "owner_id": "051886849421",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "techchallenge-eks-nodes-sg"
            },
            "tags_all": {
              "Name": "techchallenge-eks-nodes-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-059e11e8a8a90a79f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sqlserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051886849421:security-group/sg-06d8a4ffce75f818b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d8a4ffce75f818b",
            "ingress": [
              {
                "cidr_blocks": [
                  "179.111.170.52/32"
                ],
                "description": "Acesso temporario via SSMS",
                "from_port": 1433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1433
              },
              {
                "cidr_blocks": [],
                "description": "SQL Server access from EKS nodes",
                "from_port": 1433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01a375a5833478f4b"
                ],
                "self": false,
                "to_port": 1433
              }
            ],
            "name": "techchallenge-sqlserver-20260712230433611600000003",
            "name_prefix": "techchallenge-sqlserver-",
            "owner_id": "051886849421",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "techchallenge-sqlserver-sg"
            },
            "tags_all": {
              "Name": "techchallenge-sqlserver-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-059e11e8a8a90a79f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051886849421:subnet/subnet-05d258c67f90cdb43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d258c67f90cdb43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "051886849421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "techchallenge-private-0"
            },
            "tags_all": {
              "Name": "techchallenge-private-0"
            },
            "vpc_id": "vpc-059e11e8a8a90a79f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051886849421:subnet/subnet-0c2bce1ebc56359cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2bce1ebc56359cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "051886849421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "techchallenge-private-1"
            },
            "tags_all": {
              "Name": "techchallenge-private-1"
            },
            "vpc_id": "vpc-059e11e8a8a90a79f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051886849421:subnet/subnet-09aecc332c59131e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09aecc332c59131e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "051886849421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "techchallenge-public-0",
              "kubernetes.io/cluster/techchallenge": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "techchallenge-public-0",
              "kubernetes.io/cluster/techchallenge": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-059e11e8a8a90a79f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051886849421:subnet/subnet-0c615a7c4a48c0cce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c615a7c4a48c0cce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "051886849421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "techchallenge-public-1",
              "kubernetes.io/cluster/techchallenge": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "techchallenge-public-1",
              "kubernetes.io/cluster/techchallenge": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-059e11e8a8a90a79f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051886849421:vpc/vpc-059e11e8a8a90a79f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fe329a1ebd0df1e6",
            "default_route_table_id": "rtb-076d4d78ee3d2db48",
            "default_security_group_id": "sg-0d708508c1c89072e",
            "dhcp_options_id": "dopt-0fe8b66fb1c233f10",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-059e11e8a8a90a79f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-076d4d78ee3d2db48",
            "owner_id": "051886849421",
            "tags": {
              "Name": "techchallenge-vpc"
            },
            "tags_all": {
              "Name": "techchallenge-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}